test/src/e2e_vm_tests/test_programs/should_fail/unexpected_field_type_args/src/main.sw
contract;

struct A {
    field: bool,
}

fn foo(a: A) -> bool { a.field::<bool> && 0 } // recovery witness.
